argo-cd/templates/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-ui
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#   - host: ""
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: argo-cd-argocd-server
#             port:
#               number: 80

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-tls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.adrz.dev`)
    kind: Rule
    services:
    - name: argo-cd-argocd-server
      port: 80
  tls:
    certResolver: letsencrypt
